v2.3.2 "Centaur" (2017-Mar-YX)
------------------------------
* Advanced the structure of the package unikl.disco.nc with subpackages for analyses, arrivalBounds and operations.
* Improved the arrival boundings and fixed the PMOO AB's shortcut for single hop subpaths (was actually dead code before).
* LeftOverService: Generic compute method dispatches according to the configuratoin's multiplexing flag. Used in SFA and PbooAB.
* Fix: PBOO Arrival Bounding with per-hop left-over service: Use server's max SC instead of overly pessimistic entire common path's one.

v2.3.1 "Centaur" (2017-Feb-28)
------------------------------
* Evolved the factory pattern for Num implementations to a (kind of) abstract factory pattern for simplified code and improved extensibility.
* Package minplus: Improved stability by handling distorted input (null or empty sets). 
* Deconvolution: Renamed private method deconvolveGeneric to deconvolve_mTB_mRL to better reflect its capabilities. 

v2.3.0 "Centaur" (2017-Jan-11)
------------------------------
* Rework of the number abstraction layer in unikl.disco.numbers:
  The DiscoDNC is now built on a factory pattern with four implementations -- the lower body and the four legs of our new Centaur release. 
  - Num.java is now an interface to be implemented by the actual number representations in unikl.disco.numbers.implementations.
  - NumFactory.java provides methods to create a number, takes care of the representation given in the CalculatorConfig.
  - NumUtils.java provides methods to work with objects implementing the Num interface.
  - unikl.disco.numbers.implementations provides four implementations:
    - Real numbers with single precision or double precision.
    	- Both provide a flag to account for potential rounding errors when comparing numbers (comparison_epsilon).
    - Rational numbers based on Integer or BigInteger (requires Apache Commons Math 3 and special values in unikl.disco.numbers.values). 